--- a/src/components/HeaderComponent/headerstyles.css
+++ b/src/components/HeaderComponent/headerstyles.css
@@ -1,25 +1,112 @@
 :root {
-    --nav-shadow-color: #a8e7e2d2;
-    --nav-link-line: #91e5de;
+    --nav-shadow-color: #429E9F;
+    --nav-link-line: #7FC8C7;
+    --nav-link-color: #696969;
+    --nav-link-hovered: #444444;
+    --nav-btn-clicked: #90cdcc9a;
+    --nav-catalogue-clicked: #378688;
 }
 
 .styled-navbar {
-    box-shadow: 0px 5px 10px var(--nav-shadow-color);
+    box-shadow: 0px 5px 15px var(--nav-shadow-color);
     margin-bottom: 15px;
+}
+
+a.navbar-brand {
+    margin-right: 0;
+}
+
+.navbar-brand > img {
+    width: 45%;
+    max-width: 225px;
+    min-width: 145px;
+}
+
+.dropdown {
+    width: 100%;
+}
+
+button.dropdown-btn{
+    font-size: 1.1em;
+    text-transform: uppercase;
+    width: 100%;
+    min-width: fit-content;
+    background-color: var(--nav-shadow-color);
+    border: none;
+    border-radius: 5px 5px 0 0;
+    transition: background-color 250ms ease-in-out;
+}
+
+button.dropdown-btn:hover {
+    background-color: var(--nav-catalogue-clicked);
+}
+
+div.dropdown-menu {
+    width: 100%;
+    border-radius: 0 0 10px 10px;
+    border: 1px solid var(--nav-link-line);
+}
+
+@media (max-width: 767px) {
+    button.dropdown-btn {
+        width: 70%;
+    }
+    div.dropdown-menu {
+        width: 70%;
+    }
+}
+
+button.dropdown-item {
+    color: var(--nav-link-color);
+}
+
+button.dropdown-item:hover {
+    color: var(--nav-link-hovered);
+    transition: background-color 250ms ease-in-out, color 250ms ease-in-out;
+}
+
+button.dropdown-item:active {
+    color: var(--nav-link-hovered);
+    background-color: var(--nav-btn-clicked);
 }
 
 .styled-navlink {
     text-decoration: none;
+    font-size: 1.1em;
+    font-weight: bold;
+    padding-bottom: 5px;
+    color: var(--nav-link-color);
+    transition: color 350ms ease-in;
     position: relative;
+    text-transform: uppercase;
 }
 
-.styled-navlink::after {
+.styled-navlink-active {
+    color: var(--nav-link-hovered);
+}
+
+.styled-navlink-active::after {
     content: "";
     position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 2px;
+    height: 3px;
+    background-color: var(--nav-link-line);
+}
+
+.styled-navlink:hover {
+    color: var(--nav-link-hovered);
+    transition: color 350ms ease-out;
+}
+
+.styled-navlink-inactive::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 3px;
     background-color: var(--nav-link-line);
 
     transform: scaleX(0);
@@ -27,7 +114,28 @@
     transition: transform 350ms ease-in-out;
 }
 
-.styled-navlink:hover::after {
+.styled-navlink-inactive:hover::after {
     transform: scaleX(1);
     transform-origin: left;
+}
+
+button.styled-navbtn {
+    background-color: transparent;
+    transition: background-color 350ms ease-in-out;
+    border: 0px;
+}
+
+button.styled-navbtn:focus, 
+button.styled-navbtn:active {
+    outline: none;
+    box-shadow: none;
+}
+
+button.styled-navbtn:active {
+    background-color: var(--nav-btn-clicked);
+    transition: background-color 200ms ease-in-out;
+}
+
+span.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(3, 28, 26)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
