--- a/src/components/HeaderComponent/headerstyles.css
+++ b/src/components/HeaderComponent/headerstyles.css
@@ -10,7 +10,7 @@
 
 nav.styled-navbar {
     box-shadow: 0px 5px 25px var(--nav-shadow-color);
-    margin-bottom: 15px;
+    z-index: 5;
 }
 
 a.navbar-brand {
