--- a/src/components/Header/headerstyles.css
+++ b/src/components/Header/headerstyles.css
@@ -6,6 +6,8 @@
     --nav-link-hovered: #444444;
     --nav-btn-clicked: #73afd18c;
     --nav-catalogue-clicked: #4682A4;
+    --header-category-link-color: #696969;
+    --header-category-link-hovered: #444444;
 }
 
 nav.styled-navbar {
@@ -137,4 +139,15 @@ button.styled-navbtn:active {
 
 span.navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(3, 28, 26)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.header__category-link {
+    color: var(--header-category-link-color);
+    font-size: large;
+    text-decoration: none;
+}
+
+.header__category-link:hover {
+    color: var(--header-category-link-hovered);
+    text-decoration: underline;
 }
