--- a/src/components/ProductImageSlider/productimageslider.css
+++ b/src/components/ProductImageSlider/productimageslider.css
@@ -1,10 +1,15 @@
 :root {
+    --slider-bg: #ffffff;
+    --slider-fs-bg: #444444E6;
     --slider-arrow-color: #444444;
+    --slider-fs-close-btn: #479fd6;
+    --slider-fs-close-btn-hover: #4682A4;
+    --slider-fs-arrow-color: #479fd6;
 }
 
 .product-image-slider__container {
     width: 100%;
-    background-color: #fff;
+    background-color: var(--slider-bg);
     padding: 20px;
 }
 
@@ -23,10 +28,20 @@
     .swiper-button-prev {
         left: 0;
         color: var(--slider-arrow-color);
+        transition: transform 50ms ease-in-out, left 50ms ease-in-out;
     }
     .swiper-button-next {
         right: 0;
         color: var(--slider-arrow-color);
+        transition: transform 50ms ease-in-out, right 50ms ease-in-out;
+    }
+    .swiper-button-prev:hover {
+        left: 2px;
+        transform: scale(1.2);
+    }
+    .swiper-button-next:hover {
+        right: 2px;
+        transform: scale(1.2);
     }
 } 
 
@@ -52,4 +67,116 @@
             width: 100%;
         }
     }
-}  
+}
+
+.fullsreen-slider {
+    position: fixed;
+    background-color: var(--slider-fs-bg);
+    height: 100%;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+    overflow: hidden;
+    .fullsreen-slider__close-btn {
+        background-color: var(--slider-fs-close-btn);
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 5;
+    }
+    .fullsreen-slider__close-btn:hover {
+        background-color: var(--slider-fs-close-btn-hover);
+    }
+    .swiper {
+        width: 70%;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        .swiper-button-prev {
+            left: 0;
+            color: var(--slider-fs-arrow-color);
+            transition: transform 50ms ease-in-out, left 50ms ease-in-out;
+        }
+        .swiper-button-next {
+            right: 0;
+            color: var(--slider-fs-arrow-color);
+            transition: transform 50ms ease-in-out, right 50ms ease-in-out;
+        }
+        .swiper-button-prev:hover {
+            left: 2px;
+            transform: scale(1.2);
+        }
+        .swiper-button-next:hover {
+            right: 2px;
+            transform: scale(1.2);
+        }
+        .swiper-slide {
+            background-color: transparent;
+            .fullscreen-slider__image {
+                object-fit: contain;
+                width: 60%;
+            }
+        }
+    }
+}
+
+@media (max-width: 1200px) {
+    .fullsreen-slider {
+        .swiper { 
+            width: 80%;
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    .product-image-slider, .product-image-slider__thumbs  {
+        width: 80%;
+    }
+    .fullsreen-slider {
+        .swiper { 
+            width: 90%;
+            .swiper-slide {
+                .fullscreen-slider__image {
+                    width: 70%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .product-image-slider, .product-image-slider__thumbs {
+        width: 90%;
+    }
+    .fullsreen-slider {
+        .swiper {
+            width: 90%;
+            .swiper-slide {
+                .fullscreen-slider__image {
+                    width: 75%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .product-image-slider, .product-image-slider__thumbs {
+        width: 95%;
+    }
+    .fullsreen-slider {
+        .swiper { 
+            .swiper-slide {
+                .fullscreen-slider__image {
+                    width: 85%;
+                }
+            }
+            .swiper-button-prev::after, .swiper-button-next::after {
+                font-size: 40px;
+            }
+        }
+    }
+}
