--- a/src/components/Header/headerstyles.css
+++ b/src/components/Header/headerstyles.css
@@ -65,6 +65,13 @@ button.dropdown-item:active {
     background-color: var(--nav-btn-clicked);
 }
 
+.dropdown-menu {
+    .accordion__container {
+        padding: 4px 16px;
+    }  
+}
+
+
 @media (max-width: 767px) {
     div.dropdown-menu {
         width: 80%;
