--- a/src/components/Carousel/carousel.css
+++ b/src/components/Carousel/carousel.css
@@ -10,6 +10,10 @@
     object-position: center 55%;
 }
 
+.carousel-item {
+    height: 65vh;
+}
+
 .carousel-control-prev-icon, .carousel-control-next-icon {
     background-color: #479fd6;
     width: 50px;
