--- a/src/pages/MainPage/mainpagestyles.css
+++ b/src/pages/MainPage/mainpagestyles.css
@@ -2,12 +2,6 @@
     --main-bg-color: #479fd6;
 }
 
-.carousel-img {
-    width: 100vw;
-    height: 65vh;
-    object-fit: cover;
-}
-
 .carousel-item::before {
     content: '';
     display: block;
@@ -15,4 +9,5 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(to bottom, transparent 60%, var(--main-bg-color) 100%);
+    z-index: 1;
 }
