--- a/src/components/ProductImageSlider/productimageslider.css
+++ b/src/components/ProductImageSlider/productimageslider.css
@@ -24,6 +24,7 @@
         top: 0;
         left: 0;
         width: 100%;
+        object-fit: contain;
     }
     .swiper-button-prev {
         left: 0;
@@ -64,6 +65,7 @@
             top: 0;
             left: 0;
             width: 100%;
+            object-fit: contain;
         }
     }
 }
