--- a/src/components/CategoryCard/categorycard.css
+++ b/src/components/CategoryCard/categorycard.css
@@ -4,6 +4,7 @@
 }
 
 .styled-card {
+    height: 100%;
     border-radius: 15px !important;
     overflow: hidden;
     transition: box-shadow 350ms ease-in-out;
