reduced css for pages with bootstrap classes

--- a/src/components/Header/headerstyles.css
+++ b/src/components/Header/headerstyles.css
@@ -152,3 +152,7 @@ span.navbar-toggler-icon {
     color: var(--header-category-link-hovered);
     text-decoration: underline;
 }
+
+.dropdown-item, .dropdown-item:hover {
+    background-color: transparent !important;
+}
